--- a/admintheme/static/admin/css/base.css
+++ b/admintheme/static/admin/css/base.css
@@ -574,18 +574,16 @@ input[type=text], input[type=password], textarea, select, .vTextField {
 
 .module h2, .module caption, .inline-group h2 {
     margin: 0;
-    padding: 2px 5px 3px 10px;
+    padding: 2px 5px 3px 5px;
     font-size: 1em;
     text-align: left;
     font-weight: bold;
-    /*background: #7CA0C7 url(../img/default-bg.gif) top left repeat-x;*/
     color: #333;
-    /*border-bottom: 1px solid #333;*/
-    -webkit-border-radius: 8px 8px 0px 0px;
-    -moz-border-radius: 8px 8px 0px 0px;
-    -o-border-radius: 8px 8px 0px 0px;
-    border-radius: 8px 8px 0px 0px;
-background: #EFF3F7; /* Old browsers */
+    -webkit-border-radius: 8px 8px 0 0;
+    -moz-border-radius: 8px 8px 0 0;
+    -o-border-radius: 8px 8px 0 0;
+    border-radius: 8px 8px 0 0;
+    background: #EFF3F7; /* Old browsers */
 
 }
 
