Updated the links on the dashboard to look like other links

--- a/admintheme/static/admin/css/changelists.css
+++ b/admintheme/static/admin/css/changelists.css
@@ -1,4 +1,4 @@
-/* line 95, ../scss/sass/_buttons.scss */
+/* line 95, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 button,
 input[type="reset"],
 input[type="button"],
@@ -41,7 +41,7 @@ input[type="file"] > input[type="button"] {
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   box-sizing: border-box;
 }
-/* line 28, ../scss/sass/_buttons.scss */
+/* line 28, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 button:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover,
@@ -63,7 +63,7 @@ input[type="file"] > input[type="button"]:hover {
   -o-transition-duration: 0.1s;
   transition-duration: 0.1s;
 }
-/* line 38, ../scss/sass/_buttons.scss */
+/* line 38, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 button:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus,
@@ -73,7 +73,7 @@ input[type="file"] > input[type="button"]:focus {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-/* line 44, ../scss/sass/_buttons.scss */
+/* line 44, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 button:active,
 input[type="reset"]:active,
 input[type="button"]:active,
@@ -82,7 +82,7 @@ input[type="file"] > input[type="button"]:active {
   position: relative;
   top: 1px;
 }
-/* line 50, ../scss/sass/_buttons.scss */
+/* line 50, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 button a,
 input[type="reset"] a,
 input[type="button"] a,
@@ -104,7 +104,7 @@ input[type="file"] > input[type="button"] a:active,
 input[type="file"] > input[type="button"] a:focus {
   outline: none;
 }
-/* line 97, ../scss/sass/_buttons.scss */
+/* line 97, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 button::-moz-focus-inner,
 input[type="reset"]::-moz-focus-inner,
 input[type="button"]::-moz-focus-inner,
@@ -113,7 +113,7 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
   border: none;
 }
 
-/* line 102, ../scss/sass/_buttons.scss */
+/* line 102, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 input[type="submit"].default, button.default {
   color: white;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -129,7 +129,7 @@ input[type="submit"].default, button.default {
   border-color: #62c462 #62c462 #51a351;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
-/* line 64, ../scss/sass/_buttons.scss */
+/* line 64, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 input[type="submit"].default:hover, button.default:hover {
   color: white;
   background-color: #51a351;
@@ -318,7 +318,7 @@ input[type="submit"].default:hover, button.default:hover {
   padding: 0 6px;
   margin-top: 0;
 }
-/* line 28, ../scss/sass/_buttons.scss */
+/* line 28, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 #changelist-search input[type=submit]:hover {
   color: #333333;
   background-color: #e6e6e6;
@@ -336,18 +336,18 @@ input[type="submit"].default:hover, button.default:hover {
   -o-transition-duration: 0.1s;
   transition-duration: 0.1s;
 }
-/* line 38, ../scss/sass/_buttons.scss */
+/* line 38, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 #changelist-search input[type=submit]:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-/* line 44, ../scss/sass/_buttons.scss */
+/* line 44, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 #changelist-search input[type=submit]:active {
   position: relative;
   top: 1px;
 }
-/* line 50, ../scss/sass/_buttons.scss */
+/* line 50, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 #changelist-search input[type=submit] a {
   color: inherit;
   text-decoration: inherit;
@@ -468,7 +468,7 @@ input[type="submit"].default:hover, button.default:hover {
   padding: 0 6px;
   margin: 0;
 }
-/* line 28, ../scss/sass/_buttons.scss */
+/* line 28, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .button:hover {
   color: #333333;
   background-color: #e6e6e6;
@@ -486,18 +486,18 @@ input[type="submit"].default:hover, button.default:hover {
   -o-transition-duration: 0.1s;
   transition-duration: 0.1s;
 }
-/* line 38, ../scss/sass/_buttons.scss */
+/* line 38, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .button:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-/* line 44, ../scss/sass/_buttons.scss */
+/* line 44, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .button:active {
   position: relative;
   top: 1px;
 }
-/* line 50, ../scss/sass/_buttons.scss */
+/* line 50, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .button a {
   color: inherit;
   text-decoration: inherit;
@@ -557,7 +557,7 @@ input[type="submit"].default:hover, button.default:hover {
   border-radius: 3px;
   padding: 0 6px;
 }
-/* line 28, ../scss/sass/_buttons.scss */
+/* line 28, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .clear a:hover, .actions .question a:hover {
   color: #333333;
   background-color: #e6e6e6;
@@ -575,18 +575,18 @@ input[type="submit"].default:hover, button.default:hover {
   -o-transition-duration: 0.1s;
   transition-duration: 0.1s;
 }
-/* line 38, ../scss/sass/_buttons.scss */
+/* line 38, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .clear a:focus, .actions .question a:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-/* line 44, ../scss/sass/_buttons.scss */
+/* line 44, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .clear a:active, .actions .question a:active {
   position: relative;
   top: 1px;
 }
-/* line 50, ../scss/sass/_buttons.scss */
+/* line 50, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .actions .clear a a, .actions .question a a {
   color: inherit;
   text-decoration: inherit;
@@ -657,7 +657,7 @@ input[type="submit"].default:hover, button.default:hover {
   border-radius: 3px;
   padding: 0 6px;
 }
-/* line 28, ../scss/sass/_buttons.scss */
+/* line 28, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .xfull .toplinks li:hover {
   color: #333333;
   background-color: #e6e6e6;
@@ -675,18 +675,18 @@ input[type="submit"].default:hover, button.default:hover {
   -o-transition-duration: 0.1s;
   transition-duration: 0.1s;
 }
-/* line 38, ../scss/sass/_buttons.scss */
+/* line 38, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .xfull .toplinks li:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
-/* line 44, ../scss/sass/_buttons.scss */
+/* line 44, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .xfull .toplinks li:active {
   position: relative;
   top: 1px;
 }
-/* line 50, ../scss/sass/_buttons.scss */
+/* line 50, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_buttons.scss */
 .xfull .toplinks li a {
   color: inherit;
   text-decoration: inherit;
