--- a/admintheme/static/admin/css/login.css
+++ b/admintheme/static/admin/css/login.css
@@ -1137,7 +1137,7 @@ a.related-lookup:active, a.related-lookup:focus {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   padding: 9px;
   text-align: right;
-  margin-bottom: 10px;
+  margin-bottom: .3rem;
 }
 /* line 12, /Users/coordt/Projects/django-admintheme/admintheme/static/admin/scss/sass/_wells.scss */
 .submit-row blockquote {
